flexbox added to parent container and each children flex item

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
   }
 
   .panel {
@@ -34,9 +35,10 @@ html {
     font-size: 20px;
     background-size: cover; 
     background-position: center;
+    flex: 1;
   }
 
-  .panel1 { background-image: url(./images/bird-flock.jpg); }
+  .panel1 { background-image:url(./images/bird-flock.jpg); }
   .panel2 { background-image:url(./images/kitten.jpg); }
   .panel3 { background-image:url(./images/bluebird.jpg); }
   .panel4 { background-image:url(./images/deer.jpg); }
