--- a/style.css
+++ b/style.css
@@ -35,7 +35,12 @@ html {
     font-size: 20px;
     background-size: cover; 
     background-position: center;
+    /* child elements will evenly distribute total space provided by parent */
     flex: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(./images/bird-flock.jpg); }
@@ -44,11 +49,16 @@ html {
   .panel4 { background-image:url(./images/deer.jpg); }
   .panel5 { background-image:url(./images/beautifulbird.jpg); }
 
-  /* Flex Children */
+  /* Flex Items */
   .panel > * {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    border: 1px solid red;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .panel p {
