--- a/style.css
+++ b/style.css
@@ -54,12 +54,17 @@ html {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
-    border: 1px solid red;
     flex: 1 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
+  .panel > *:first-child {transform: translateY(-100%);}
+  .panel.open-active > *:first-child {transform: translateY(0);}
+  .panel > *:last-child {transform: translateY(100%);}
+  .panel.open-active > *:last-child {transform: translateY(0);}
+
 
   .panel p {
     text-transform: uppercase;
@@ -73,5 +78,6 @@ html {
   }
 
   .panel.open {
+    flex: 5;
     font-size: 40px;
   }
