--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body{
     margin: 0;
 }
 
+/* BU kodu ekledik. css reset'in daha gerekli bir eki diyebiliriz. kaynaklar kısmında olacak bir makale. */
+
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+
 .panels {
     /* en az yükseklik, görünen sayfanın tamamı kadar olsun. */
     min-height: 100vh;
@@ -35,6 +41,7 @@ body{
     color: white;
     /* tüm yazılar ortalansın. */
     text-align: center;
+    align-items: center;
     /* geçişlerin nasıl olması gerektiğini tanımlayan kod */
     transition:
     font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
@@ -124,9 +131,11 @@ body{
 
 /* bir elementte hem panel hem de open sınıfı varsa: */
 
-.panel .open {
+.panel.open {
     /* büyürken ve küçülürken diğerlerinden 5 kat daha fazla yer kapla. */
     flex: 5;
     /* metin boyutuna net bir değer verdik. */
     font-size: 40px;
 }
+
+/* Hadi bakalım sayfa nasıl olmuş? */
